--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand fs-4 fw-bold" href="#">Im Ghif</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,25 @@
             </div>
           </div>
         </div>
-      </nav>
+    </nav>
+
+    <section id="home" class="home container">
+        <div class="row d-flex align-items-center">
+            <div class="col-8">
+                <h3 class="fw-semibold">Lorem, ipsum.</h3>
+                <h1 class="fw-bold">Lorem, ipsum dolor.</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, eius.</p>
+                <a class="btn" href="images/work-1.png" download>Resume</a>
+            </div>
+            <div class="col-4">
+                <img src="images/potrait.png" alt="Potrait">
+            </div>
+        </div>
+        <div class="arrow w-100 d-flex align-items-center flex-column mt-3>
+            <a class="text-decoration-none text-dark" href="#about">More Info</a>
+            <img id="arrow" class="mt-2" src="images/arrow.svg" alt="icon arrow">
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
