--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -25,7 +25,6 @@
           </div>
         </div>
     </nav>
-
     <section id="home" class="home container">
         <div class="row d-flex align-items-center">
             <div class="col-8">
@@ -41,6 +40,39 @@
         <div class="arrow w-100 d-flex align-items-center flex-column mt-3>
             <a class="text-decoration-none text-dark" href="#about">More Info</a>
             <img id="arrow" class="mt-2" src="images/arrow.svg" alt="icon arrow">
+        </div>
+    </section>
+    <section id="about" class="about container">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero exercitationem pariatur blanditiis natus asperiores optio quis, eaque qui ea reprehenderit sapiente aliquid illo, sit at consectetur voluptates consequatur totam. Dolore!</p>
+        <div class="about-exp-item">
+            <div class="about-exp-item-header">
+                <div>
+                    <h5>PT. Lorem, ipsum dolor.</h5>
+                    <p>Software Engineer (2021-now)</p>
+                </div>
+                <button class="btn button">More Info</button>
+            </div>
+            <p class="about-exp-item-detail d-none">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, delectus.</p>
+        </div>
+        <div class="about-exp-item">
+            <div class="about-exp-item-header">
+                <div>
+                    <h5>PT. Lorem, ipsum dolor.</h5>
+                    <p>Software Engineer (2021-now)</p>
+                </div>
+                <button class="btn button">More Info</button>
+            </div>
+            <p class="about-exp-item-detail d-none">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, delectus.</p>
+        </div>
+        <div class="about-exp-item">
+            <div class="about-exp-item-header">
+                <div>
+                    <h5>PT. Lorem, ipsum dolor.</h5>
+                    <p>Software Engineer (2021-now)</p>
+                </div>
+                <button class="btn button">More Info</button>
+            </div>
+            <p class="about-exp-item-detail d-none">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, delectus.</p>
         </div>
     </section>
 
