--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -50,9 +50,9 @@
                     <h5>PT. Lorem, ipsum dolor.</h5>
                     <p>Software Engineer (2021-now)</p>
                 </div>
-                <button class="btn button">More Info</button>
+                <button class="btn button" onclick="toggleDetail(event)">More Info</button>
             </div>
-            <p class="about-exp-item-detail d-none">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, delectus.</p>
+            <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate in, ipsum soluta perferendis, magni quis amet alias eum neque consequatur reiciendis nisi harum accusantium illum nemo quasi possimus culpa. Quis.</p>
         </div>
         <div class="about-exp-item">
             <div class="about-exp-item-header">
@@ -60,9 +60,9 @@
                     <h5>PT. Lorem, ipsum dolor.</h5>
                     <p>Software Engineer (2021-now)</p>
                 </div>
-                <button class="btn button">More Info</button>
+                <button class="btn button" onclick="toggleDetail(event)">More Info</button>
             </div>
-            <p class="about-exp-item-detail d-none">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, delectus.</p>
+            <p class="about-exp-item-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum illum corrupti distinctio asperiores magni aut modi nam natus ipsa quibusdam, velit officiis cumque alias earum. Sed, possimus sit? Iste, suscipit?</p>
         </div>
         <div class="about-exp-item">
             <div class="about-exp-item-header">
@@ -70,9 +70,9 @@
                     <h5>PT. Lorem, ipsum dolor.</h5>
                     <p>Software Engineer (2021-now)</p>
                 </div>
-                <button class="btn button">More Info</button>
+                <button class="btn button" onclick="toggleDetail(event)">More Info</button>
             </div>
-            <p class="about-exp-item-detail d-none">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, delectus.</p>
+            <p class="about-exp-item-detail">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure error dicta tempora aut vel tenetur incidunt culpa quos libero eaque perferendis unde aliquid assumenda voluptatibus, voluptate dolor at iusto minus.</p>
         </div>
     </section>
 
