--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -75,6 +75,18 @@
             <p class="about-exp-item-detail">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure error dicta tempora aut vel tenetur incidunt culpa quos libero eaque perferendis unde aliquid assumenda voluptatibus, voluptate dolor at iusto minus.</p>
         </div>
     </section>
+    <section id="work" class="work container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae in, doloremque quidem iste culpa totam autem molestias beatae quod. Dolorem quibusdam a modi enim nostrum exercitationem eligendi delectus ea asperiores.
+            </div>
+            <div class="col work-img">
+                <img src="images/work-1.png" alt="work 1" id="work-1">
+                <img src="images/work-2.png" alt="work 2" id="work-2">
+                <img src="images/work-3.png" alt="work 3" id="work-3">
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
