--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -81,9 +81,15 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae in, doloremque quidem iste culpa totam autem molestias beatae quod. Dolorem quibusdam a modi enim nostrum exercitationem eligendi delectus ea asperiores.
             </div>
             <div class="col work-img">
-                <img src="images/work-1.png" alt="work 1" id="work-1">
-                <img src="images/work-2.png" alt="work 2" id="work-2">
-                <img src="images/work-3.png" alt="work 3" id="work-3">
+                <div id="work-1" class="work-img-item">
+                    <img src="images/work-1.png" alt="work 1">
+                </div>
+                <div id="work-2" class="work-img-item">
+                    <img src="images/work-2.png" alt="work 2">
+                </div>
+                <div id="work-3" class="work-img-item">
+                    <img src="images/work-3.png" alt="work 3">
+                </div>
             </div>
         </div>
     </section>
