--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand fs-4 fw-bold" href="#">Im Ghif</a>
@@ -25,6 +26,7 @@
           </div>
         </div>
     </nav>
+    <!-- Section Untuk Membuat Home -->
     <section id="home" class="home container">
         <div class="row d-flex align-items-center">
             <div class="col-8">
@@ -42,6 +44,7 @@
             <img id="arrow" class="mt-2" src="images/arrow.svg" alt="icon arrow">
         </div>
     </section>
+    <!-- Section Untuk Membuat About -->
     <section id="about" class="about container">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero exercitationem pariatur blanditiis natus asperiores optio quis, eaque qui ea reprehenderit sapiente aliquid illo, sit at consectetur voluptates consequatur totam. Dolore!</p>
         <div class="about-exp-item">
@@ -75,6 +78,7 @@
             <p class="about-exp-item-detail">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure error dicta tempora aut vel tenetur incidunt culpa quos libero eaque perferendis unde aliquid assumenda voluptatibus, voluptate dolor at iusto minus.</p>
         </div>
     </section>
+    <!-- Section Untuk Membuat Work -->
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
             <div class="col">
@@ -90,6 +94,47 @@
                 <div id="work-3" class="work-img-item">
                     <img src="images/work-3.png" alt="work 3">
                 </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section Untuk Membuat Contact -->
+    <section id="contact" class="contact container">
+        <div class="row d-flex align-items-center gap-5">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et aspernatur laborum totam quam mollitia corporis ipsam voluptatem velit recusandae animi.</p>
+                <div class="row">
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Facebook.svg" alt="Social Media">
+                        <p>Ghifari Dzaki</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="images/Instagram.svg" alt="Social Media">
+                        <p>@GhifariDzaki</p>
+                    </div>
+                    <div class="col d-flex align-items-center">
+                        <img src="images/linkedin.svg" alt="linkedin icon">
+                        <p>@GhifariDzaki</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <form class="contactForm" onsubmit="onFormSub(event)">
+                    <div class="mb-3">
+                      <label for="inpEmail" class="form-label">Email Address</label>
+                      <input type="email" class="form-control" id="inpEmail" placeholder="Your Valid Email">
+                    </div>
+                    <div class="mb-3">
+                      <label for="inpSubject" class="form-label">Subject</label>
+                      <input type="text" class="form-control" id="inpSubject" placeholder="Your Subject Here">
+                    </div>
+                    <div class="mb-3">
+                      <label for="inpMessage" class="form-label">Message</label>
+                      <input type="text" class="form-control" id="inpMessage" placeholder="Give Me A Message!">
+                    </div>
+                    <div class="d-flex justify-content-center mt-5">
+                        <button type="submit" class="btn button">Submit</button>
+                    </div>
+                  </form>
             </div>
         </div>
     </section>
