--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -81,10 +81,10 @@
     <!-- Section Untuk Membuat Work -->
     <section id="work" class="work container">
         <div class="row d-flex align-items-center gap-5">
-            <div class="col-12 col-5">
+            <div class="col-12 col-md-5">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae in, doloremque quidem iste culpa totam autem molestias beatae quod. Dolorem quibusdam a modi enim nostrum exercitationem eligendi delectus ea asperiores.
             </div>
-            <div class="col-12 col-6 work-img">
+            <div class="col-12 col-md-6 work-img">
                 <div id="work-1" class="work-img-item">
                     <img src="images/work-1.png" alt="work 1">
                 </div>
